[gd_scene load_steps=2 format=3 uid="uid://b4k2j9z4x8k1w"]

[ext_resource type="Script" path="res://view/ui/MainHUD.gd" id="1_hud"]

[node name="MainHUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hud")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="TopBar" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/TopBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
value = 100.0

[node name="WaveLabel" type="Label" parent="MarginContainer/TopBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
text = "Wave: 0"
horizontal_alignment = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="MessageLabel" type="Label" parent="MarginContainer/CenterContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Wave Started!"
